--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,8 @@
   .container {
     @apply  px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-14;
   }
+
+  .navigation-text{
+    @apply block mt-4 lg:inline-block lg:mt-0 text-black mr-4
+  }
 }
