--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@
     @apply block mt-4 lg:inline-block lg:mt-0 text-black mr-4
   }
 }
+
+.LazyLoad {
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+.is-visible {
+  opacity: 1;
+}
